--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "backend",
+  "name": "boardly-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.1",
-    "socket.io": "^4.8.1"
+    "dotenv": "^16.0.3"
   }
 }
